--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Masum Portfolio</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <section class="banner">
+    <div class="changes"> 
+      <h1>Welcome To</h1>
+      <h1><span class="color">Doraemon</span> World</h1>
+      <h3>Doraemon a superhero in this genaration</h3>
+        
+      <p>#MS-903 "Doraemon" or simply Doraemon is the main, titular character of all Doraemon media (including, but not limited to the original manga, anime, video games, and movies). He is a robot cat from the 22nd century who travels back to 20th century to help improve the miserable life of Nobita, who will become the great-great-grandfather of Sewashi, Doraemon's friend. Doraemon's is usually represented by the color blue.</p>
+      <a class="button" target="blank" href="https://www.programming-hero.com/">If you know create a websiteb click here</a>
+    </div>
   
+   <div class="changes">
+     <img src="Images/Doraemon.jpg" alt="">
+   </div>
+ </section>
+ 
 </body>
 </html>
