--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
      <img src="Images/Doraemon.jpg" alt="">
    </div>
  </section>
+
+ <section class="middle"> 
+   <div class="changes"><img src="Images/nobita.jpg" alt=""></div>
+
+   <div class="changes" >
+
+     <h1 class="marjin">Doraemon Lifestyle</h1>
+     <h2 class="marjin">Doraemon personalities</h2>
+     
+     <P class="marjin">Intelligent, silly (sometimes), kindhearted, helpful, friendly, talkative, big-mouthed, loud, rude, short-tempered, hypocritical, musophobic, conceited, unhelpful, weird, temperamental, slow-witted (sometimes), heroic.Doraemon hates Rats, his gadgets being misused, being called"Tanuki or Racoon Dog", unable to eat Dorayaki, Dorami dragging him to hospitals, leaving Nobita, being criticized for his efforts</P>  
+
+     <a class="button" target="blank" href="https://doraemon.fandom.com/wiki/Doraemon_(Franchise)">Source Information</a>
+
+   </div>
+
+
+
+
+ </section>
  
 </body>
 </html>
