--- a/index.html
+++ b/index.html
@@ -38,13 +38,26 @@
      <P class="marjin">Intelligent, silly (sometimes), kindhearted, helpful, friendly, talkative, big-mouthed, loud, rude, short-tempered, hypocritical, musophobic, conceited, unhelpful, weird, temperamental, slow-witted (sometimes), heroic.Doraemon hates Rats, his gadgets being misused, being called"Tanuki or Racoon Dog", unable to eat Dorayaki, Dorami dragging him to hospitals, leaving Nobita, being criticized for his efforts</P>  
 
      <a class="button" target="blank" href="https://doraemon.fandom.com/wiki/Doraemon_(Franchise)">Source Information</a>
-
+    </div> 
+ </section>
+ <Section class="last">
+   <div id="fuck" class="leo" >
+     <h1>Motivational Speak</h1>
+     <h3>Create a Positive Environment</h3>
+     <p>You may not always have a comfortable life and you will not always be able to solve all of the world’s problems at once but don’t ever underestimate the importance you can have because history has shown us that courage can be contagious and hope can take on a life of its own.</p>
+   </div>
+   
+   <div id="luck" class="leo">
+     <h1>Motivational Speak</h1>
+     <h3>Celebrate Your Small Wins</h3>
+     <p>When you think of your BIG goal, sometimes you start feeling overwhelmed. Why? Because big goals  don’t get achieved right away. Instead, you need to create mini goals to help excite you along the  way. This way you can be more goal-orientated and build a habit of being more effective.</p>
    </div>
 
+ </Section>
 
-
-
- </section>
- 
+ <footer>
+   <p>This website create by "Masum Khan Talha"</p>
+ </footer>
+  
 </body>
 </html>
