--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
   
    <div class="changes">
-     <img src="Images/Doraemon.jpg">
+     <img src="images/Doraemon.jpg">
    </div>
  </section>
 
  <section class="middle"> 
-   <div class="changes"><img src="Images/nobita.jpg"></div>
+   <div class="changes"><img src="images/nobita.jpg"> </div>
 
    <div class="changes" >
 
